@startuml

package "CalendarEvent" {

class CalendarEventManager {
    + val calendarEvents : LiveData<List<CalendarEvent>>
    - val calendarEventFetchers : List<CalendarEventFetcher>
    + fun addMeeting()
    + fun syncMeetings()
}

class CalendarEvent {
    - String title
    - long startTime
    - long endTime
    - int priority
    - List<Reminder> reminders
    - String syncId
}

interface CalendarEventFetcher {
    fun fetchCalendarEvents() : List<CalendarEvent>
}

CalendarEventManager "1" o-- "*" CalendarEvent : Has
CalendarEventManager "1" o-- "*" CalendarEventFetcher : Has
CalendarEventFetcher "*" o-- "*" CalendarEvent : Fetches

}

package "CalendarEventAlert" {

class CalendarEventAlertManager {
    private val priorityAlertTime : Long
    private val normalAlertTime : Long
    fun getCalendarEventWithAlertType(calendarEvents : List<CalendarEvent>) : Map<CalendarEvent : AlertType>
}

}

@enduml